<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Передавач показників"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/smoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoke_level"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/smokeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/smoke"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gas_level"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/smokeValue"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/gasValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gas"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/radiation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radiation_level"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gasValue"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/radiationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiation"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_connection"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiationValue"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/connectionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_conn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection"
        app:layout_constraintVertical_bias="0.02" />

</androidx.constraintlayout.widget.ConstraintLayout>